--- a/index.html
+++ b/index.html
@@ -21,8 +21,27 @@
         </td>
       </tr>
     </table>
+    <h3>Skills</h3>
+    <table>
+      <tr>
+        <td>Object oriented Programming</td>
+        <td>⭐️⭐️⭐️⭐️</td
+      </tr>
+      <tr>
+        <td>Full Stack Web Development</td>
+        <td>⭐️⭐️⭐️⭐️</td
+      </tr>
+      <tr>
+        <td>SQL/NoSQL DB</td>
+        <td>⭐️⭐️⭐️⭐️</td
+      </tr>
+      <tr>
+        <td>Version repository tools & debugging</td>
+        <td>⭐️⭐️⭐️⭐️</td>
+      </tr>
+    </table>
     <hr>
-    <h3>Employment History</h3>
+    <h3>EMPLOYMENT HISTORY</h3>
     <table cellspacing=10>
       <thead>
         <th style="text-align:left">Timeperiod</th>
@@ -48,11 +67,34 @@
       </tbody>
     </table>
     <hr />
-    <h3>Educational Qualification</h3>
-    <ul>
-      <li>BTech in Information Technology with GPA of 8.71
-      <li>Senior Secondary (PCM,Computer Science as majors) with an aggregate %ge of 88.4
-      <li>Higher Secondary with an aggregate %ge of 95
-    </ul>
+    <h3>EDUCATIONAL QUALIFICATION</h3>
+    <table cellspacing=10>
+      <thead>
+        <th style="text-align:left">Timeperiod</th>
+        <th style="text-align:left">Degree</th>
+        <th style="text-align:left">Board/University</th>
+        <th style="text-align:left">Aggregate Percentage</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Jul 2012 - Jul 2016</td>
+          <td>BTech in Information Technology</td>
+          <td>BPUT</td>
+          <td>82.1</td>
+        </tr>
+        <tr>
+          <td>May 2010 - Jun 2012</td>
+          <td>Senior Secondary</td>
+          <td>CBSE</td>
+          <td>88.4</td>
+        </tr>
+        <tr>
+          <td>May 2009 - May 2010</td>
+          <td>Higher Secondary</td>
+          <td>CBSE</td>
+          <td>95</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
